# ObsidianIRC

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BUG_FIXES.md  BUILD.md  CHANNEL_METADATA.md  CONTRIBUTING.md  Dockerfile  PINNED_PMS_AND_MONITOR.md  README.md  biome.json  compose.yaml  index.html  lefthook.yml  lingui.config.ts  package-lock.json  package.json  privacy.html  remove-console-logs.mjs  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
.github/: dependabot.yml
.github/workflows/: cloudflare_pages.yaml  crabnebula.yaml  docker.yaml  github_pages.yaml  publish.yaml  workflow.yaml
ai_docs/: extended-monitor.md  metadata-2.md  monitor.md  obsidianirc-backend.md
docker/: ergo.yaml  nginx.conf
scripts/: ios-dev.sh  setup-dev-certs.sh
src/: App.tsx  images.js  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/plugins/ios-keyboard/: Cargo.toml  build.rs
src-tauri/plugins/ios-keyboard/ios/: Package.swift
src-tauri/plugins/ios-keyboard/ios/.build/index-build/arm64-apple-macosx/debug/index/db/v13/saved/: lock.mdb
src-tauri/plugins/ios-keyboard/ios/Sources/: KeyboardPlugin.swift
src-tauri/plugins/ios-keyboard/permissions/autogenerated/: reference.md
src-tauri/plugins/ios-keyboard/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/share-sheet/: Cargo.toml  build.rs
src-tauri/plugins/share-sheet/.tauri/tauri-api/Sources/Tauri/: Invoke.swift  Tauri.swift
src-tauri/plugins/share-sheet/ios/: Package.swift
src-tauri/plugins/share-sheet/ios/Sources/ShareSheet/: ShareSheet.swift
src-tauri/plugins/share-sheet/src/: lib.rs
src-tauri/src/: lib.rs  socket.rs
src/components/: OAuthCallback.tsx  PrivacyPolicy.tsx
src/hooks/: useAutoFocusTyping.ts  useAutoUpdater.ts  useChannelTabSwitching.ts  useConnectionResilience.ts  useDragReorder.ts  useEmojiCompletion.ts  useJoinAndSelectChannel.ts  useKeyboardResize.ts  useLongPress.ts  useMediaQuery.ts  useMentionAutocorrectGuard.ts  useMessageSending.ts  useReactions.ts  useScrollToBottom.ts  useSwipeNavigation.ts  useTypingNotification.ts
src/lib/: aiTools.ts  audioManager.ts  authToken.ts  bouncerAttrs.ts  browserTranslation.ts  clientCommands.ts  customEmoji.tsx  customEmojiPicker.ts  emojiAdminApi.ts  eventGrouping.ts  haptic.ts  imageUtils.ts  ircClient.ts  ircUrlParser.ts  ircUtils.ts  ircUtils.tsx  labeledResponse.ts  mediaProbe.ts  mediaUpload.ts  mediaUtils.ts  messageFormatter.ts  messageProtocol.ts  (+13 more)
tests/: App.test.tsx  setup.ts  test-utils.tsx
(+343 files in other folders)
